Clean up codes