@@ -1,7 +1,6 @@
 package com.nulabinc.backlog4j.auth;
 
 
-import com.nulabinc.backlog4j.BacklogAPIException;
 import com.nulabinc.backlog4j.BacklogAuthException;
 import com.nulabinc.backlog4j.BacklogException;
 import com.nulabinc.backlog4j.conf.BacklogConfigure;
@@ -12,8 +11,8 @@ import com.nulabinc.backlog4j.http.NameValuePair;
 import com.nulabinc.backlog4j.internal.InternalFactory;
 import com.nulabinc.backlog4j.internal.json.InternalFactoryJSONImpl;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -64,11 +63,7 @@ public class BacklogOAuthSupport implements OAuthSupport {
                 "?client_id=" + this.clientId +
                 "&response_type=" + "code";
         if (redirectUrl != null) {
-            try {
-                url += "&redirect_uri=" + URLEncoder.encode(this.redirectUrl, "UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                throw new BacklogAPIException(e);
-            }
+            url += "&redirect_uri=" + URLEncoder.encode(this.redirectUrl, StandardCharsets.UTF_8);
         }
         return url;
     }
